# queue

./: .dockerignore  .dprint.jsonc  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SCHEDULES.md  WORKFLOWS.md  deny.toml  mise.toml
.claude/: settings.json  settings.local.json
.claude/skills/audit-testing/: SKILL.md
.github/actions/apply-sql-fixtures/: action.yml
.github/actions/setup-pgrx/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release-api.yml  release-extension.yml  release-image.yml  release-sdk.yml  security.yml
.sqlx/: query-034c288af1cd149813111b34539274a59bf2d4239f413ccbe91a2b22b4fcc210.json  query-05040ce5cf1e821a5ecfd034ecb29efadc63fe95829f7351f4fff411d6796b98.json  query-0b50d64b5206a1a4b167ed83e6ba9137d11c217edc907f9f0a41a93b5921051d.json  query-0ed71e4f2d9acd37a8c7cfaa5d57af7dffd02f170837ec60725d437b07e43fcc.json  query-132918ce6c4613559560aa36839a0325e3c6aa731c9e1d3ed76927e699a62346.json  query-140f26eeb6735839a251e523042eee050c0eb38b469063a65ea915f2fa9f9945.json  query-18d8951b96e4886da4352b2ee3beca880e2f76b2bbc4f5d0521ea06dc24cb600.json  query-195bb82a92498f779883031d0f9b88323d62a3adc65afadbef5d8289fa1555ab.json  query-1f4560aaf55653c371e20109f397d3ef6cfabe5dfd4231d34e378eb9968d65fd.json  query-210bcc2691e0e437a3de6bae28a843d813605fc39d14219210c667578181a009.json  query-26e3cc708d766ff096f19c7af4537d82b9d5664f6f43478ec6ab10b591a591b0.json  query-2763f6bf7ebe3ba0e3fdc4096eb67f0d5d61d5c114373ff103cbb836825f64c2.json  query-2b8c08b18244dd9a917f8a673baacc3b93731e2a6a3c51c331c204c869d471e5.json  query-2d26916b715c506252a6109ce581aa0266b37290c08e372794ad3f6ad535fe7c.json  query-2e9b41722e7cc1dcdf7068a7b3900412e40fc9aee82e1913a4d881c0ccdb629a.json  query-2ed27199c712b5e4adafb122e424c71bf926b4424a4870644f0e5a0ba5f9e8ca.json  query-3035d7a6ba91772114895003a8b0a3f574e785240b9ba3c9ab96a9369f8f6519.json  query-312703f91c68f982642cf8242fd38d3a9f52d6358c5d52132ae7550549cfc8b6.json  query-35620c4ccca1c0f7015acf908bdcd26091b26f663177b2bfc07f0ef5e94cf081.json  query-3b6289d0d00e8d06df8d46b4e0d61550cb5c58a448e18392ecf234615be4a135.json  query-4034e5bf79c136a64e19dd24bda1515d14e7d38b740c6de037e714905b3a6720.json  query-42a2ab58e56bf8cec905c3fc472ba4f6f6705f326484238749747944c5e7675b.json  query-4410dcc81fe3516514ca85803262201424533322f6cf6dcf666d192d0868d8f7.json  query-48ca3b83fefd3cd87430ee30126cb76c43e0cfe9f0ff92a97789255eec935dcb.json  query-4dcfa6e2b666496bbc53a6844fde59cba8742789c49562a641d2215f088461b8.json  query-543b2be547d12318fd3fcf88e5c31b8993b152b9b673cb5276123d182c17d1f5.json  query-567fdfbe43c89bb31414acf3a4d6cf789623bcde55f20ed8d4e10ec1fdbd213e.json  query-58e8de9affa7513d9ad326b53f3aa7fcca633edf612f408865af0cb1e9b523e5.json  query-5c4b0ca90761c24ad202cf91affecae645162448622ff5b19df624e791b85b04.json  query-5cff2d00abbcf987076e3bf0a729fa91cc25a4a5eb18e8de617274a6d1622544.json  query-5f77431b22dfc5ad6c1d24dc084b74ec5807f2aab203e0a237fb79a3ea75a92d.json  query-605c2a5e2e405e86d2b195007b4c9d29d4e0d67097e7ad381f6303c1cd54e0b0.json  query-6f5954da555c8ef00e91a3cc134e195ed4f203278ff885d25e4b95b33eb51c5f.json  query-7113d9e0067fb11352478e6e60f769ce31352f003c6f5d672b3c5541a6e370a3.json  query-715ce1978a5931a58b2f23d2d07e8c23a0ec12e2b1b0c3e8fddc90101b5fc147.json  query-748b211a06f039ce0783c9c0c26c155a92057b5340338ec57060b73573de8261.json  query-751034fe5c3e1346ff3308373a1541d024f6ee8e76d6b81eb376db1b71412d8a.json  query-777e371d0c9b1245628782515e4d28ee8d9a81e1766945a2b1f27ee148e8e371.json  query-7cd7d2b398290f62c0bbcd03182c8feec35a7752af3ae3ed371de56503e71b72.json  query-884ea93519277bbda061f5b57b9889eba7cc186798b0e103562630d5d0fd40e7.json  (+56 more)
bench/: Cargo.toml
bench/fixtures/: pgmq_baseline.sql
bench/src/: main.rs
beyond-queue-extension/: ARCHITECTURE.md  Cargo.toml  LICENSE  beyond_queue.control  beyond_queue_extension.control
beyond-queue-extension/sql/: schema.sql
beyond-queue-extension/src/: lib.rs  queue.rs  routing_cache.rs  waiter.rs
openapi/: v1.json
pgmq-extension/: Cargo.toml
pgmq-extension/sql/: schema.sql
pgmq-extension/src/: lib.rs  queue.rs  waiter.rs
sdk/ts/: .npmrc  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/ts/cron/: ARCHITECTURE.md  README.md  package.json  vitest.config.ts
sdk/ts/events/: README.md  package.json  tsconfig.json
sdk/ts/openapi/: v1.json
sdk/ts/queue/: README.md  package.json  tsdown.config.ts  vitest.typecheck.config.ts
sdk/ts/scripts/: generate-types.mjs
sdk/ts/src/: client.ts  errors.ts  http.ts  index.ts  types.ts
src/: cli.rs  config.rs  db.rs  error.rs  handoff.rs  lib.rs  main.rs  metrics.rs  signing.rs  telemetry.rs  test_support.rs
src/middleware/: auth.rs
src/ops/: coalesce.rs  delete.rs  delivery.rs  event.rs  mod.rs  queue_admin.rs  receive.rs  schedule.rs  schedule_worker.rs  send.rs  topic.rs  visibility.rs
src/routes/: events.rs  messages.rs  mod.rs  previews.rs  queues.rs  schedules.rs  topics.rs
src/schedule/: cron.rs  every.rs  expression.rs  humanize.rs  mod.rs
src/sns/: context.rs  error.rs  mod.rs  types.rs
src/sns/actions/: create_topic.rs  delete_topic.rs  get_subscription_attributes.rs  get_topic_attributes.rs  list_subscriptions.rs  list_subscriptions_by_topic.rs  list_topics.rs  mod.rs  publish.rs  subscribe.rs  unsubscribe.rs
src/sqs/: context.rs  error.rs  mod.rs  receipt.rs  types.rs  util.rs
src/sqs/actions/: change_message_visibility.rs  change_message_visibility_batch.rs  create_queue.rs  delete_message.rs  delete_message_batch.rs  delete_queue.rs  get_queue_attributes.rs  mod.rs  (+6 more)
tests/: handoff_e2e.rs  handoff_rigorous.rs  handoff_smoke.rs  helpers.rs  integration_test.rs
tests/fixtures/: hot_paths.sql  load_pgrx_extension.sql
tests/handoff_harness/: mod.rs
tests/integration_test/: async_commit.rs  auth.rs  errors.rs  fifo.rs  healthz.rs  helpers.rs  http_delivery.rs  main.rs  message_properties.rs  messages.rs  previews.rs  queues.rs  schedules.rs  sns_pubsub.rs  sqs_protocol.rs  subscriptions.rs  tls.rs  visibility.rs
xtask/src/: main.rs
(+37 files in other folders)
