[workspace]
members = ["bench", "beyond-queue-extension", "xtask"]
resolver = "2"

[package]
name = "beyond-queue"
version = "0.1.0"
edition = "2024"
license = "license = "
description = "PostgreSQL-native message queue with pgrx hot paths and an SQS-compatible REST API"

[[bin]]
name = "beyond-queue"
path = "src/main.rs"

[lib]
name = "beyond_queue"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
croner = "2"
form_urlencoded = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
md5 = "0.7"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
prometheus = "0.14"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.8"
rcgen = { version = "0.14", features = ["pem"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form", "http2"] }
rsa = { version = "0.9", features = ["sha2"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "json", "migrate"] }
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower = "0.5"
tower-http = { version = "0.6", features = ["catch-panic", "request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
x509-cert = "0.2"
