[package]
name = "beyond-queue-extension"
version = "0.1.0"
edition = "2024"
publish = false

# lib.name fixes the canonical install identity to `beyond_queue` (control file
# beyond_queue.control, $libdir/beyond_queue, beyond_queue--<ver>.sql) that the
# beyond-pg supervisor expects (REQUIRED_EXTENSIONS / shared_preload_libraries).
# cargo build emits libbeyond_queue.so; packaging copies it to beyond_queue.so.
# The cargo package stays `beyond-queue-extension` (CI `-p`, asset prefix).
[lib]
name = "beyond_queue"
crate-type = ["cdylib"]

[features]
default = []
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "=0.18.0", default-features = false }
serde_json = "1"
